--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    
+
     <div class="container">
 
         <div class="mask-container">
@@ -21,8 +21,10 @@
         </div>
 
         <div class="border"></div>
-        <div class="circle"></div>
+        <div class="circle">
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" viewBox="0 0 55 55"><path fill="#000" d="M13 21l-5-5 5-5m6 0l5 5-5 5"/></svg> -->
+        </div>
     </div>
 
-  <script src="scripts/main.js" type="module"></script>
+    <script src="scripts/script.js"></script>
 </body>
