--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <div class="border"></div>
         <div class="circle">
-            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="55" height="55" viewBox="0 0 55 55"><path fill="#000" d="M13 21l-5-5 5-5m6 0l5 5-5 5"/></svg> -->
+            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 -3 43 50"><path fill="#000" d="M13 21l-5-5 5-5m6 0l5 5-5 5"/></svg>
         </div>
     </div>
 
