--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 
             <div class="hero-container">
                 <h1>Coding the <span>Curbs</span></h1>
-                <h2>De kracht van meervoudig ruimtegebruik</h2>
+                <h2>DE KRACHT VAN MEERVOUDIG RUIMTEGEBRUIK</h2>
                 <p>Een oplossing die een digitale laag over de fysieke <br>
                     infrastructuur legt en zo de stad klaarstoomt voor de toekomst.</p>
                 <button class="btn btn-primary">Sluit je aan</button>
-                <img src="/assets/CTC_no_logo38.JPG" width="400">
+                <img src="./assets/CTC_no_logo38.JPG" width="400">
                 <div class="ocean">
                     <div class="wave"></div>
                     <div class="wave"></div>
